Added Month,Year Spinner Added ParentActivities in Manifest Added InputType as Number in Amount and Target fields

--- a/app/src/main/res/layout/add_expense.xml
+++ b/app/src/main/res/layout/add_expense.xml
@@ -22,7 +22,8 @@
         <EditText
             android:id="@+id/editAmount"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:inputType="number"/>
 
     </LinearLayout>
 
