--- a/app/src/main/res/layout/add_target.xml
+++ b/app/src/main/res/layout/add_target.xml
@@ -68,7 +68,8 @@
         <EditText
             android:id="@+id/editTarget"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:inputType="number"/>
 
     </LinearLayout>
 
