--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -15,17 +15,21 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textViewHead"
+                android:id="@+id/textViewCategory"
                 android:text="Heading"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
                 android:text="Description"
-                android:id="@+id/textViewDesc"
+                android:id="@+id/textViewAmount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-
+            <TextView
+                android:text="Description"
+                android:id="@+id/textViewDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
