--- a/app/src/main/res/layout/relative_line.xml
+++ b/app/src/main/res/layout/relative_line.xml
@@ -3,4 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.anychart.AnyChartView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/chartLine" />
+
 </LinearLayout>
