--- a/app/src/main/res/layout/relative_categorywise.xml
+++ b/app/src/main/res/layout/relative_categorywise.xml
@@ -1,147 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linear_layout1"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <TextView
             android:id="@+id/textViewCategory"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:text="Category:" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Category:"
+            android:paddingEnd="10dp"
+            app:layout_constraintTop_toTopOf="@id/guideline"
+            app:layout_constraintStart_toStartOf="@id/guideline3"/>
 
         <Spinner
             android:id="@+id/spinnerCategory"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/textViewCategory"
+            app:layout_constraintBottom_toBottomOf="@id/textViewCategory"
+            app:layout_constraintStart_toEndOf="@id/barrier2"
+            app:layout_constraintEnd_toStartOf="@id/guideline4"/>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/textViewFrom"
-        android:layout_below="@id/linear_layout1"
-        android:text="From:"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linear_layout2"
-        android:layout_below="@id/textViewFrom"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        android:text="From:"
+        android:paddingEnd="10dp"
+        app:layout_constraintStart_toStartOf="@id/textViewCategory"
+        app:layout_constraintTop_toBottomOf="@id/textViewCategory"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        app:layout_constraintVertical_bias="0.4"/>
 
         <TextView
             android:id="@+id/textViewFromMonth"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:text="Month:" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Month:"
+            android:paddingEnd="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/textViewFrom"
+            app:layout_constraintStart_toStartOf="@id/textViewFrom"/>
 
         <Spinner
             android:id="@+id/spinnerFromMonth"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linear_layout3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/linear_layout2"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/textViewFromMonth"
+            app:layout_constraintBottom_toBottomOf="@id/textViewFromMonth"
+            app:layout_constraintStart_toEndOf="@id/barrier2"
+            app:layout_constraintEnd_toStartOf="@id/guideline4"/>
 
         <TextView
             android:id="@+id/textViewFromYear"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:text="Year:" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Year:"
+            android:paddingEnd="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/textViewFromMonth"
+            app:layout_constraintStart_toStartOf="@id/textViewFromMonth" />
 
         <Spinner
             android:id="@+id/spinnerFromYear"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/textViewFromYear"
+            app:layout_constraintBottom_toBottomOf="@id/textViewFromYear"
+            app:layout_constraintStart_toEndOf="@id/barrier2"
+            app:layout_constraintEnd_toStartOf="@id/guideline4"/>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/textViewTo"
-        android:layout_below="@id/linear_layout3"
-        android:text="To:"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linear_layout4"
-        android:layout_below="@id/textViewTo"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        android:text="To:"
+        android:paddingEnd="10dp"
+        app:layout_constraintBottom_toTopOf="@id/barrier"
+        app:layout_constraintStart_toStartOf="@id/textViewFromYear"
+        app:layout_constraintTop_toBottomOf="@+id/textViewFromYear"
+        app:layout_constraintVertical_bias="0.5" />
 
-        <TextView
+    <TextView
             android:id="@+id/textViewToMonth"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:text="Month:" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Month:"
+            android:paddingEnd="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/textViewTo"
+            app:layout_constraintStart_toStartOf="@id/textViewTo"/>
 
         <Spinner
             android:id="@+id/spinnerToMonth"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linear_layout5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@id/linear_layout4"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/textViewToMonth"
+            app:layout_constraintBottom_toBottomOf="@id/textViewToMonth"
+            app:layout_constraintStart_toEndOf="@id/barrier2"
+            app:layout_constraintEnd_toStartOf="@id/guideline4"/>
 
         <TextView
             android:id="@+id/textViewToYear"
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:text="Year:" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingEnd="10dp"
+            android:text="Year:"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/textViewToMonth"
+            app:layout_constraintStart_toStartOf="@id/textViewToMonth"/>
 
         <Spinner
             android:id="@+id/spinnerToYear"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/textViewToYear"
+            app:layout_constraintBottom_toBottomOf="@id/textViewToYear"
+            app:layout_constraintStart_toEndOf="@id/barrier2"
+            app:layout_constraintEnd_toStartOf="@id/guideline4"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonSeeData"
-        android:layout_below="@id/linear_layout5"
         android:text="View Data"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintTop_toBottomOf="@id/barrier"
+        app:layout_constraintBottom_toTopOf="@id/guideline2"
+        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintEnd_toStartOf="@id/guideline4"
+        app:layout_constraintStart_toStartOf="@id/guideline3" />
 
-</RelativeLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.05" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.95" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.95" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        android:id="@+id/barrier"
+        app:constraint_referenced_ids="textViewCategory,spinnerCategory,spinnerToYear,textViewFromYear,textViewFrom,spinnerFromMonth,spinnerFromYear,textViewToYear,textViewTo,spinnerToMonth,textViewFromMonth,textViewToMonth,guideline5"/>
+
+    <androidx.constraintlayout.widget.Barrier
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="right"
+        android:id="@+id/barrier2"
+        app:constraint_referenced_ids="textViewCategory,textViewFrom,textViewFromMonth,textViewFromYear,textViewTo,textViewToYear,textViewToMonth"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
