--- a/app/src/main/res/layout/add_expense.xml
+++ b/app/src/main/res/layout/add_expense.xml
@@ -108,4 +108,12 @@
         app:constraint_referenced_ids="textViewCategory,textViewAmount"
         tools:layout_editor_absoluteX="411dp" />
 
+    <Button
+        android:id="@+id/buttonAddCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Category"
+        app:layout_constraintTop_toBottomOf="@id/spinnerCategory"
+        app:layout_constraintEnd_toEndOf="@id/spinnerCategory"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
