--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -8,6 +8,9 @@
             android:id="@+id/viewTarget"
             android:title="View Set Targets" />
         <item
+            android:id="@+id/viewAllCat"
+            android:title="View All Categories" />
+        <item
             android:id="@+id/viewMonthly"
             android:title="View Monthly Expenses" />
         <item
