--- a/app/src/main/res/layout/view_all_categories.xml
+++ b/app/src/main/res/layout/view_all_categories.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textViewInfo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/tap_to_delete"
+        android:text="@string/tap_to_edit"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
