--- a/app/src/main/res/layout/edit_expense.xml
+++ b/app/src/main/res/layout/edit_expense.xml
@@ -49,7 +49,8 @@
         android:text="Update Expense"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintStart_toStartOf="@+id/guideline5"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
         app:layout_constraintTop_toBottomOf="@id/barrier3" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -73,14 +74,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.05" />
+        app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
+        app:layout_constraintGuide_percent="0.05"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.95" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.95"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/buttonUpdateExpense" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline8"
@@ -90,6 +97,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintGuide_percent="0.39"
         app:layout_constraintTop_toBottomOf="@+id/textViewCategory" />
+
+    <Button
+        android:id="@+id/buttonCancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonUpdateExpense"
+        app:layout_constraintEnd_toStartOf="@+id/buttonUpdateExpense"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/guideline5"
+        app:layout_constraintStart_toStartOf="@+id/guideline5"
+        app:layout_constraintTop_toTopOf="@+id/buttonUpdateExpense" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier3"
@@ -112,7 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Category"
-        app:layout_constraintTop_toBottomOf="@id/spinnerCategory"
-        app:layout_constraintEnd_toEndOf="@id/spinnerCategory"/>
+        app:layout_constraintEnd_toEndOf="@id/spinnerCategory"
+        app:layout_constraintTop_toBottomOf="@id/spinnerCategory" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
