--- a/app/src/main/res/layout/view_all_categories.xml
+++ b/app/src/main/res/layout/view_all_categories.xml
@@ -47,5 +47,16 @@
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintBottom_toBottomOf="@id/guideline4"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_addbutton"
+        app:fabSize="normal"
+        android:backgroundTint="@color/colorPrimary"
+        android:id="@+id/fabCat"
+        android:elevation="30dp"
+        app:layout_constraintBottom_toTopOf="@id/guideline4"
+        app:layout_constraintEnd_toStartOf="@id/guideline2"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
