--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     tools:openDrawer="start"
     tools:context=".MainActivity"
     android:id="@+id/drawer_layout"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:background="@mipmap/background">
 
     <LinearLayout
         android:layout_width="match_parent"
