--- a/app/src/main/res/layout/view_all_categories.xml
+++ b/app/src/main/res/layout/view_all_categories.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityViewAllCategories">
+    tools:context=".ActivityViewAllCategories"
+    android:background="@mipmap/background">
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
