--- a/app/src/main/res/layout/view_target.xml
+++ b/app/src/main/res/layout/view_target.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityViewTarget">
+    tools:context=".ActivityViewTarget"
+    android:background="@mipmap/background">
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
         android:layout_width="wrap_content"
